==> sj15712795029/bluetooth_stack/board/stm32f407/hw_spi_flash.c <==
#include "hw_spi_flash.h"

uint8_t hw_spi_flash_init()
{
    GPIO_InitTypeDef GPIO_InitStruct = {0};

    __HAL_RCC_GPIOF_CLK_ENABLE();

    /*Configure GPIO pin : FLASH_SEL_Pin */
    GPIO_InitStruct.Pin = GPIO_PIN_11;
    GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
    HAL_GPIO_Init(GPIOF, &GPIO_InitStruct);

    SPI_FLASH_DESELECT;
    /* SPI1 init */
    protocol_spi1_init();
    /* Read manufacturer id and device id */
    hw_spi_flash_read_manu_dev_id(&manuf_id,&device_id);
    HW_DEBUG("manu manuf id 0x%02x, device id 0x%02x\n",manuf_id,device_id);

    /* SPI flash size update */
    if(manuf_id == WINBOND_MANUFACTURER_ID && device_id == W25Q80_DEVICE_ID)
    {
        HW_DEBUG("SPI FLASH:W25Q80\n");
        spi_flash_size = FLASH_W25Q80_SIZE;
        block_count = FLASH_W25Q80_BLOCK;
        sector_total_count = block_count * SECTOR_COUNT_PER_BLOCK;
    }
    else if(manuf_id == WINBOND_MANUFACTURER_ID && device_id == W25Q16_DEVICE_ID)
    {
        HW_DEBUG("SPI FLASH:W25Q16\n");
        spi_flash_size = FLASH_W25Q16_SIZE;
        block_count = FLASH_W25Q16_BLOCK;
        sector_total_count = block_count * SECTOR_COUNT_PER_BLOCK;
    }
    else if(manuf_id == WINBOND_MANUFACTURER_ID && device_id == W25Q32_DEVICE_ID)
    {
        HW_DEBUG("SPI FLASH:W25Q32\n");
        spi_flash_size = FLASH_W25Q32_SIZE;
        block_count = FLASH_W25Q32_BLOCK;
        sector_total_count = block_count * SECTOR_COUNT_PER_BLOCK;
    }
    else if(manuf_id == WINBOND_MANUFACTURER_ID && device_id == W25Q64_DEVICE_ID)
    {
        HW_DEBUG("SPI FLASH:W25Q64\n");
        spi_flash_size = FLASH_W25Q64_SIZE;
        block_count = FLASH_W25Q64_BLOCK;
        sector_total_count = block_count * SECTOR_COUNT_PER_BLOCK;
    }
    else if(manuf_id == WINBOND_MANUFACTURER_ID && device_id == W25Q128_DEVICE_ID)
    {
        HW_DEBUG("SPI FLASH:W25Q128\n");
        spi_flash_size = FLASH_W25Q128_SIZE;
        block_count = FLASH_W25Q128_BLOCK;
        sector_total_count = block_count * SECTOR_COUNT_PER_BLOCK;
    }
    else if(manuf_id == WINBOND_MANUFACTURER_ID && device_id == W25Q256_DEVICE_ID)
    {
        /* Read spi flash register 3 ,get address mode */
        uint8_t reg3_ret = hw_spi_flash_read_reg(w25qxx_read_status_reg3);
        HW_DEBUG("SPI FLASH:W25Q256\n");
        spi_flash_size = FLASH_W25Q256_SIZE;
        block_count = FLASH_W25Q256_BLOCK;
        sector_total_count = block_count * SECTOR_COUNT_PER_BLOCK;

        /* If it is not 4 byte address mode,change 4 byte address mode */
        if((reg3_ret & FLASH_REG3_ADS) == 0)
        {
            SPI_FLASH_SELECT;
            protocol_spi1_read_write_byte(w25qxx_enter_4B_addr_mode);
            SPI_FLASH_DESELECT;
        }
    }
    else
    {
        HW_DEBUG("HW ERROR:invalid flash manuf id or device id\n");
        return HW_ERR_FLASH_INVALID_ID;
    }

    return HW_ERR_OK;
}

static void protocol_spi1_init()
{
    hspi1.Instance = SPI1;
    hspi1.Init.Mode = SPI_MODE_MASTER;
    hspi1.Init.Direction = SPI_DIRECTION_2LINES;
    hspi1.Init.DataSize = SPI_DATASIZE_8BIT;
    hspi1.Init.CLKPolarity = SPI_POLARITY_HIGH;
    hspi1.Init.CLKPhase = SPI_PHASE_2EDGE;
    hspi1.Init.NSS = SPI_NSS_SOFT;
    hspi1.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_2;
    hspi1.Init.FirstBit = SPI_FIRSTBIT_MSB;
    hspi1.Init.TIMode = SPI_TIMODE_DISABLE;
    hspi1.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;
    hspi1.Init.CRCPolynomial = 10;
    if (HAL_SPI_Init(&hspi1) != HAL_OK)
    {
        return;
    }

    __HAL_SPI_ENABLE(&hspi1);

    protocol_spi1_read_write_byte(0xff);

}
