==> sj15712795029/bluetooth_stack/board/stm32f10x/hw_spi_flash.c <==
#include "hw_spi_flash.h"

uint8_t hw_spi_flash_init()
{
    GPIO_InitTypeDef  GPIO_InitStructure;

    RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);

    /* Chip select use PA4 */
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_4;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init(GPIOA, &GPIO_InitStructure);

    SPI_FLASH_DESELECT;
    /* SPI1 init */
    protocol_spi1_init();
    /* Read manufacturer id and device id */
    hw_spi_flash_read_manu_dev_id(&manuf_id,&device_id);
    HW_DEBUG("manu manuf id 0x%02x, device id 0x%02x\n",manuf_id,device_id);

    /* SPI flash size update */
    if(manuf_id == WINBOND_MANUFACTURER_ID && device_id == W25Q80_DEVICE_ID)
    {
        HW_DEBUG("SPI FLASH:W25Q80\n");
        spi_flash_size = FLASH_W25Q80_SIZE;
        block_count = FLASH_W25Q80_BLOCK;
        sector_total_count = block_count * SECTOR_COUNT_PER_BLOCK;
    }
    else if(manuf_id == WINBOND_MANUFACTURER_ID && device_id == W25Q16_DEVICE_ID)
    {
        HW_DEBUG("SPI FLASH:W25Q16\n");
        spi_flash_size = FLASH_W25Q16_SIZE;
        block_count = FLASH_W25Q16_BLOCK;
        sector_total_count = block_count * SECTOR_COUNT_PER_BLOCK;
    }
    else if(manuf_id == WINBOND_MANUFACTURER_ID && device_id == W25Q32_DEVICE_ID)
    {
        HW_DEBUG("SPI FLASH:W25Q32\n");
        spi_flash_size = FLASH_W25Q32_SIZE;
        block_count = FLASH_W25Q32_BLOCK;
        sector_total_count = block_count * SECTOR_COUNT_PER_BLOCK;
    }
    else if(manuf_id == WINBOND_MANUFACTURER_ID && device_id == W25Q64_DEVICE_ID)
    {
        HW_DEBUG("SPI FLASH:W25Q64\n");
        spi_flash_size = FLASH_W25Q64_SIZE;
        block_count = FLASH_W25Q64_BLOCK;
        sector_total_count = block_count * SECTOR_COUNT_PER_BLOCK;
    }
    else if(manuf_id == WINBOND_MANUFACTURER_ID && device_id == W25Q128_DEVICE_ID)
    {
        HW_DEBUG("SPI FLASH:W25Q128\n");
        spi_flash_size = FLASH_W25Q128_SIZE;
        block_count = FLASH_W25Q128_BLOCK;
        sector_total_count = block_count * SECTOR_COUNT_PER_BLOCK;
    }
    else if(manuf_id == WINBOND_MANUFACTURER_ID && device_id == W25Q256_DEVICE_ID)
    {
        /* Read spi flash register 3 ,get address mode */
        uint8_t reg3_ret = hw_spi_flash_read_reg(w25qxx_read_status_reg3);
        HW_DEBUG("SPI FLASH:W25Q256\n");
        spi_flash_size = FLASH_W25Q256_SIZE;
        block_count = FLASH_W25Q256_BLOCK;
        sector_total_count = block_count * SECTOR_COUNT_PER_BLOCK;

        /* If it is not 4 byte address mode,change 4 byte address mode */
        if((reg3_ret & FLASH_REG3_ADS) == 0)
        {
            SPI_FLASH_SELECT;
            protocol_spi1_read_write_byte(w25qxx_enter_4B_addr_mode);
            SPI_FLASH_DESELECT;
        }
    }
    else
    {
        HW_DEBUG("HW ERROR:invalid flash manuf id or device id\n");
        return HW_ERR_FLASH_INVALID_ID;
    }

    return HW_ERR_OK;
}

static void protocol_spi1_init()
{
    GPIO_InitTypeDef GPIO_InitStructure;
    SPI_InitTypeDef  SPI_InitStructure;

    RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA | RCC_APB2Periph_SPI1, ENABLE );

    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_5 | GPIO_Pin_6 | GPIO_Pin_7;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init(GPIOA, &GPIO_InitStructure);

    SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
    SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
    SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
    SPI_InitStructure.SPI_CPOL = SPI_CPOL_High;
    SPI_InitStructure.SPI_CPHA = SPI_CPHA_2Edge;
    SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;
    SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_2;
    SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
    SPI_InitStructure.SPI_CRCPolynomial = 7;
    SPI_Init(SPI1, &SPI_InitStructure);

    SPI_Cmd(SPI1, ENABLE);

    protocol_spi1_read_write_byte(0xff);

}
